# order-management-service

./: .dockerignore  .env.example  .env.sample  Dockerfile  README.md  alembic.ini  docker-compose.yml  dockerignore  main.py  pyproject.toml  requirement.txt  requirements.txt
alembic/: env.py
alembic/versions/: 414e4d7d1578_.py  93978ecba2db_.py  d29b3e8c3bd0_.py  ebcc74ca53ee_.py
app/: main.py
app/api/: address.py  api_router.py  customer.py  order.py
app/api/address/: address_handler.py  address_routes.py
app/api/cart/: cart_handler.py  cart_routes.py
app/api/coupon/: coupon_handler.py  coupon_routes.py
app/api/customer/: customer_handler.py  customer_routes.py
app/api/merchant/: merchant_handler.py  (+1 more)
app/common/: logger.py  utils.py
app/config/: config.py  constants.py
app/database/: database_accessor.py  database_connector.py
app/domain_types/: address.py  base_search_types.py  cart.py  coupon.py  order.py  order_domain_models.py  order_status_types.py
app/startup/: application.py  dependencies.py  error_handlers.py  router.py
app/telemetry/: enums.py  exporters.py  instrumenter.py  tracing.py
docs/: docker.md  setup.md
docs/alembic migrations/: migration.md
docs/telemetry/: jaeger.md  zipkin.md
postman/: Order Management.postman_collection.json  order-management-local.postman_environment.json
tests/: test_base_routes.py  test_config.py
tests/customer/: customer_test_data.py  test_customer_routes.py
tests/merchant/: merchant_test_data.py  test_merchant_routes.py
tests/order/: order_test_data.py  test_order_routes.py
(+58 files in other folders)
