[tool.poetry]
name = "order-management-service"
version = "0.1.0"
description = "A generic multi-purpose order management service."
authors = ["Kiran Kharade <Kiran.Kharade@inflectionzone.com>"]
readme = "README.md"
packages = [{include = "order_management_service"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
pygments = "^2.15.1"
python-dotenv = "^1.0.0"
pip = "^23.1.2"
mysqlclient = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
httpx = "^0.24.1"
faker = "^18.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
